--- a/Kismat App/Views/ViewControllers/Feed/Xibs/FeedItem2TVCell.xib
+++ b/Kismat App/Views/ViewControllers/Feed/Xibs/FeedItem2TVCell.xib
@@ -174,7 +174,7 @@
                                                 </userDefinedRuntimeAttributes>
                                             </view>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="LSc-CU-Ipp" secondAttribute="trailing" constant="63" id="Dle-Pk-6AY"/>
                                             <constraint firstAttribute="width" constant="125" id="F30-2u-ahN"/>
@@ -282,22 +282,22 @@
     </objects>
     <designables>
         <designable name="0eO-wQ-6fx">
-            <size key="intrinsicContentSize" width="126" height="11.666666666666666"/>
+            <size key="intrinsicContentSize" width="211" height="20.333333333333332"/>
         </designable>
         <designable name="1rx-zU-ucu">
-            <size key="intrinsicContentSize" width="38" height="14"/>
+            <size key="intrinsicContentSize" width="53.666666666666664" height="20.333333333333332"/>
         </designable>
         <designable name="F7S-op-5qg">
             <size key="intrinsicContentSize" width="407" height="612"/>
         </designable>
         <designable name="Xr0-6b-sUq">
-            <size key="intrinsicContentSize" width="75" height="14"/>
+            <size key="intrinsicContentSize" width="104" height="20.333333333333332"/>
         </designable>
         <designable name="ejV-6Z-Jem">
-            <size key="intrinsicContentSize" width="66.333333333333329" height="16.333333333333332"/>
+            <size key="intrinsicContentSize" width="77.666666666666671" height="20.333333333333332"/>
         </designable>
         <designable name="gLy-u7-xbI">
-            <size key="intrinsicContentSize" width="125" height="16.333333333333332"/>
+            <size key="intrinsicContentSize" width="139.66666666666666" height="20.333333333333332"/>
         </designable>
     </designables>
     <resources>
@@ -315,11 +315,8 @@
         <namedColor name="warning">
             <color red="1" green="0.80800002813339233" blue="0.31000000238418579" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemGray2Color">
-            <color red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
