--- a/Kismat App/Views/ViewControllers/ReqConVC/Xibs/TabsHeaderTVCell.xib
+++ b/Kismat App/Views/ViewControllers/ReqConVC/Xibs/TabsHeaderTVCell.xib
@@ -297,7 +297,7 @@
             <size key="intrinsicContentSize" width="162" height="152"/>
         </designable>
         <designable name="gjT-fS-ZUo">
-            <size key="intrinsicContentSize" width="52" height="16.666666666666668"/>
+            <size key="intrinsicContentSize" width="51.666666666666664" height="16.333333333333332"/>
         </designable>
     </designables>
     <resources>
